--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Industrial Escape</title>
-    <script src="./lib/cuon-matrix.js"></script>
-    <script src="./lib/vectorTests.html.js"></script>
-    <script src="./src/asg0.js"></script>
-    <script src="./src/asg0.html"></script>
-
+    <title>CSE160 Assignment 0</title>
 </head>
 <body>
-    <div id="Assignment 0"></div>
+    <canvas id="example" width="400" height="400"></canvas>
+    <script src="./lib/cuon-matrix.js"></script>
+    <script src="./src/asg0.js"></script>
+
+    <!-- Get v1 information -->
+    <p>
+        v1:x<input id="x">
+        y<input id="y">
+    </p>
+    
+    <!-- Get v2 information -->
+    <p>
+        v2:x<input id="x2">
+        y<input id="y2">
+    </p>
+    
+    <!-- Create Draw Button-->
+    <input type="button" id="Draw" value="Draw" onclick="handleDrawEvent()">
+
+    <!-- Do Operations -->
+    <p>
+        Operations:<select id="operations" name="choices">
+            <option value="multiply">Mutiply</option>
+            <option value="add">Add</option>
+            <option value="subtract">Subtract</option>
+            <option value="divide">Divide</option>
+            <option value="magnitude">Magnitude</option>
+            <option value="normalize">Normalize</option>
+            <option value="angle">Angle Between</option>
+            <option value="area">Area</option>
+         </select>
+        Scalar:<input id="scalar">
+    </p>
+
+    <!-- Create Draw Button-->
+    <input type="button" id="Draw" value="Draw" onclick="handleDrawEvent()">
+
 </body>
 </html>
